@startuml
!define Table(name,desc) class name as "desc" << (T,#FFAAAA) >>
!define primary_key(x) <b>x</b>
!define unique(x) <color:green>x</color>
!define not_null(x) <u>x</u>
' other tags available:
' <i></i>
' <back:COLOR></color>, where color is a color name or html color code
' (#FFAACC)
' see: http://plantuml.com/classes.html#More
hide methods
hide stereotypes

Table(news, "news\nNews articles from external sources") {
  primary_key(id) INT,
  title TEXT,
  description TEXT,
  link TEXT,
  source_id UUID,
  author TEXT,
  pubdate DATE,
  summary TEXT,
  post JSON,
  sentiment INT,
}

Table(news_sources, "news_sources\nExternal news sources") {
  primary_key(id) INT,
  name TEXT,
  url TEXT,
  last_pub DATE,
}

Table(influencers, "influencers\nTracked influencers") {
  primary_key(id) INT,
  first_name TEXT,
  last_name TEXT,
  full_name TEXT,
  image_uri TEXT,
  image_attribution TEXT,
  facebook_uri TEXT,
  facebook_display TEXT,
  instagram_uri TEXT,
  instagram_display TEXT,
  youtube_uri TEXT,
  youtube_display TEXT,
  web_uri TEXT,
  web_display TEXT,
  twitch_uri TEXT,
  twitch_display TEXT,
  wikipedia_uri TEXT,
  wikipedia_display TEXT,
  twitter_uri TEXT,
  twitter_display TEXT,
  primary_uri TEXT,
  primary_display TEXT,
  query_terms TEXT[],
  query TSTQUERY
}

Table(influencer_news, "influencer_news\nRelate influencer to news") {
  primary_key(infuencer_id) INT,
  primary_key(news_id) INT,
}

' relationships
news_sources --> news
influencers --> influencer_news
news --> influencer_news

@enduml